--- a/ICANJDevApp/ICANJ/pom.xml
+++ b/ICANJDevApp/ICANJ/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.icanj</groupId>
-	<artifactId>app</artifactId>
+	<artifactId>ICANJ</artifactId>
 	<name>ICANJ</name>
 	<packaging>war</packaging>
-	<version>1.0.0-ICANJ</version>
+	<version>1.0.0</version>
 	<properties>
 		<java-version>1.6</java-version>
 		<org.springframework-version>3.1.0.RELEASE</org.springframework-version>
