--- a/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/web.xml
+++ b/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
 	</context-param>
 	
 	<!-- Spring Security -->
+	<listener>
+	<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>
+	
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>
