Added Basic Directory Functionality.

--- a/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/system.properties
+++ b/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/system.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName.hostmonster.dev= com.mysql.jdbc.Driver
 jdbc.dialect.hostmonster.dev=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl.hostmonster.dev=jdbc:mysql://localhost:3306/test
-jdbc.username.hostmonster.dev=root
-jdbc.password.hostmonster.dev=
+jdbc.databaseurl.hostmonster.dev=jdbc:mysql://icanj.org:3306/icanjorg_devdb
+jdbc.username.hostmonster.dev=icanjorg_devdb
+jdbc.password.hostmonster.dev=I@12word
