--- a/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/web.xml
+++ b/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/web.xml
@@ -53,5 +53,19 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<error-page>
+    <error-code>404</error-code>
+    <location>/errors/404.html</location>
+	</error-page>
+	<error-page>
+    <error-code>500</error-code>
+    <location>/errors/500.html</location>
+	</error-page>
+	
+	<error-page>
+    <error-code>405</error-code>
+    <location>/errors/404.html</location>
+	</error-page>
 
 </web-app>
