--- a/ICANJDevApp/ICANJ/pom.xml
+++ b/ICANJDevApp/ICANJ/pom.xml
@@ -12,6 +12,7 @@
 		<org.springframework-version>3.1.0.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.9</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
+	 <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
