Added Emailing Capabilities on Directory Service.Added Velocity templates.

--- a/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/system.properties
+++ b/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/system.properties
@@ -1,5 +1,20 @@
+#MochaHost DB
+jdbc.driverClassName.mochahost.dev= com.mysql.jdbc.Driver
+jdbc.dialect.mochahost.dev=org.hibernate.dialect.MySQLDialect
+jdbc.databaseurl.mochahost.dev=jdbc:mysql://50.31.138.79:3306/icanjorg_devdb
+jdbc.username.mochahost.dev=icanjorg_devdb
+jdbc.password.mochahost.dev=I@12word
+
+#Hostmonster DB
 jdbc.driverClassName.hostmonster.dev= com.mysql.jdbc.Driver
 jdbc.dialect.hostmonster.dev=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl.hostmonster.dev=jdbc:mysql://50.31.138.79:3306/icanjorg_devdb
+jdbc.databaseurl.hostmonster.dev=jdbc:mysql://icanj.org:3306/icanjorg_devdb
 jdbc.username.hostmonster.dev=icanjorg_devdb
 jdbc.password.hostmonster.dev=I@12word
+
+
+#Mail Server
+mail.smtp.host=mail.icanj.org
+mail.smtp.port=26
+mail.smtp.username=administrator@icanj.org
+mail.smtp.password=I@12word
