--- a/ICANJDevApp/ICANJ/pom.xml
+++ b/ICANJDevApp/ICANJ/pom.xml
@@ -12,7 +12,7 @@
 		<org.springframework-version>3.1.0.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.9</org.aspectj-version>
 		<org.slf4j-version>1.5.10</org.slf4j-version>
-	 <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
+		<netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -67,13 +67,13 @@
 			<artifactId>spring-security-core</artifactId>
 			<version>3.0.7.RELEASE</version>
 		</dependency>
- 
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>3.0.7.RELEASE</version>
 		</dependency>
- 
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
@@ -215,6 +215,20 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.9</version>
 		</dependency>
+		<!-- Velocity Templates -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+
 
 
 	</dependencies>
