Tithing Module Changes.

--- a/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/system.properties
+++ b/ICANJDevApp/ICANJ/src/main/webapp/WEB-INF/system.properties
@@ -12,9 +12,16 @@ jdbc.databaseurl.hostmonster.dev=jdbc:mysql://icanj.org:3306/icanjorg_devdb
 jdbc.username.hostmonster.dev=icanjorg_devdb
 jdbc.password.hostmonster.dev=I@12word
 
+#localhost DB
+jdbc.driverClassName.localhost.dev= com.mysql.jdbc.Driver
+jdbc.dialect.localhost.dev=org.hibernate.dialect.MySQLDialect
+jdbc.databaseurl.localhost.dev=jdbc:mysql://localhost:3306/test
+jdbc.username.localhost.dev=root
+jdbc.password.localhost.dev=
+
 
 #Mail Server
-mail.smtp.host=mail.icanj.org
-mail.smtp.port=26
-mail.smtp.username=administrator@icanj.org
-mail.smtp.password=I@12word
+mail.smtp.host=localhost
+mail.smtp.port=25
+mail.smtp.username=administrator@my.icanj.org
+mail.smtp.password=icanjE123
